# CHANGE LOG

All notable changes to this project will be documented in this file.

This project adheres to [Semantic Versioning](http://semver.org).

This document is formatted according to the principles of [Keep A CHANGELOG](http://keepachangelog.com).

----
## [In Git] - Not released

### Added

### Changed

### Deprecated

### Removed

### Fixed

* [JavaScript] Fix JavaScript build
  ([#499](https://github.com/cucumber/cucumber/pull/499)
   [noisygerman])

## [6.0.13] - 2018-09-25

This major release aligns Gherkin with [Example Mapping](https://cucumber.io/blog/2015/12/08/example-mapping-introduction),
a collaborative technique for *designing* scenarios and discovering details
about rules and behaviour.

A new `Rule` keyword has been introduced, and acts as a grouping of one or more
`Example`s - a new synonym for `Scenario`. The `Scenario Outline` keyword can now
be interchanged with the `Scenario` keyword, which makes Gherkin a little less confusing,
especially to beginners. These are the first major change to the
Gherkin grammar in 8 years or so, and we're pretty excited about them. We hope they will
guide people towards thinking of scenarios as *examples of business rules*
rather than a series of form submissions and link clicking. This rule-focused
style engages product owners, and can act as amazing living documentation of your
product. It opens up for the true benefits of BDD - a business-friendly format 
for describing and agreeing on software behaviour, and a guide to development. 
Developers will code against this spec, and produce better (simpler) software faster. 
The software will do what it says on the tin.

The new Gherkin grammar is backwards compatible, meaning that existing Gherkin
documents are still valid.

The library API however is not backwards compatible. It is now a stream-like
API which produces a stream of messages (source, AST and pickle messages).
