@@ -6,5 +6,5 @@
       }
     }]
   ],
-  "plugins": ["@babel/transform-async-to-generator"]
+  "plugins": ["@babel/plugin-transform-async-to-generator"]
 }
