@@ -1,3 +1,0 @@
-*.js
-*.ts
-*.js.map
