@@ -17,7 +17,7 @@
 
     <properties>
         <io.cucumber.messages.version>2.0.1-SNAPSHOT</io.cucumber.messages.version>
-        <io.cucumber.c21e.version>1.1.6-SNAPSHOT</io.cucumber.c21e.version>
+        <io.cucumber.c21e.version>1.1.9-SNAPSHOT</io.cucumber.c21e.version>
         <project.Automatic-Module-Name>io.cucumber.gherkin</project.Automatic-Module-Name>
     </properties>
 
