@@ -19,7 +19,7 @@ Gem::Specification.new do |s|
                     'source_code_uri'   => 'https://github.com/cucumber/cucumber/blob/master/gherkin/ruby',
                   }
 
-  s.add_dependency 'c21e', '~> 1.1'
+  s.add_dependency 'c21e', '~> 1.1.8'
   s.add_dependency 'cucumber-messages', '~> 2.0.0'
 
   s.add_development_dependency 'bundler', '~> 1.16'
