@@ -7,10 +7,9 @@
     "test": "mocha",
     "eslint-fix": "eslint --fix src test",
     "coverage": "nyc --reporter=html --reporter=text mocha",
-    "build": "npx babel src --out-dir dist/src",
-    "build-test": "npx babel test --out-dir dist/test",
-    "prepare": "npm run build",
-    "postinstall": "node scripts/postinstall.js",
+    "build": "babel src --out-dir dist/src",
+    "build-test": "babel test --out-dir dist/test",
+    "prepublishOnly": "npm run build",
     "mocha-built": "mocha dist/test"
   },
   "repository": {
